--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,3 +1,226 @@
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
 :root {
-  background-color:brown;  
+  --outer-space: rgb(146, 181, 214);
+  --turquoise: rgb(21, 134, 134);
+  --dark-blue: dark rgb(46, 46, 68);
+  --black: rgb(29, 28, 28);
+}
+
+::selection {
+  background-color: var(--outer-space);
+  color: var(--black);
+}
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-family:'Times New Roman', Times, serif;
+  font-size: 1.75rem;
+  line-height: 1.5;
+  color: var(--black);
+  background-color: var(--outer-space);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-bottom: 0.625rem;
+  color: var(--black);
+  font-weight: 700;
+  line-height: 1.1;
+}
+h1 {
+font-size: 4rem;
+text-align: left;
+display: inline-block;
+padding-bottom: 25px var(--turquoise);
+padding-top: 20px;
+}
+h2 {
+  font-size: 3.5rem;
+  display: block;
+  margin-block-start: 0.83em;
+  margin-block-end: 0.83em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+}
+h3 {
+  font-size: 3rem;
+}
+h4 {
+  font-size: 2.5rem;
+}
+h5 {
+  font-size: 2rem;
+}
+h6 {
+  font-size: 1.5rem;
+}
+p {
+font-size: 2.5rem;
+margin-bottom: 1rem;
+}
+header {
+  margin: 0 auto;
+  background-color:rgb(70, 70, 172);
+  height:370px;
+  width: 100%;
+}
+
+nav {
+  display: inline-block;
+  padding-right: 10px;
+  padding-top: 25px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+li {
+  display: inline;
+  padding-right: 10px;
+}
+a {
+  color: white;
+}
+.background-image {
+  width: 100%;
+  height: 250px;
+}
+.subtitle-text {
+  text-align: right;
+  position: absolute;
+  
+}
+.name {
+display: flex;
+flex-wrap: wrap;
+flex-direction: row;
+justify-content: space-between;
+}
+.about-me {
+  display: flex;
+  align-items: center;
+  font-size: 3.5rem;
+}
+.description {
+  border-left: 100px var(--black);
+}
+
+
+
+.about-me h2{
+color:rgb(27, 7, 65);
+margin-right: 10px;
+margin-left: 30px;
+padding: 10px 20px 20px 20px;
+width: fit-content;
+}
+.about-me p{
+  color: var(--black);
+  padding: 10px 10px 10px 7px;
+  margin-top: 10px;
+  justify-content: flex-start;
+  text-align: justify;
+  border-left: var(--black) solid 4px;
+}
+.flex-content {
+  border-left: var(--black) solid 4px;
+  
+}
+.work {
+  padding: 10px 10px 10px 7px;
+  margin-top: 10px;
+  align-items: center;
+}
+
+.work, .flex-content {
+  padding: 10px 10px 10px 23px;
+  margin-top: 10px;
+  display:flex;
+  align-items: center;
+  justify-content:justify;
+  flex-direction:row;
+}
+.project1 {
+  width: 100%;
+  height: 20%;
+}
+
+
+
+.work h2 {
+  color: var(--black);
+  margin-right: 10px;
+  margin-left: 15px;
+  padding: 10px 20px 20px 20px;
+}
+.graphics {
+  display: flex;
+  flex-direction: column;
+  position:relative;
+}
+
+.Project2 {
+  width: 210%;
+  height: 150px;
+}
+.content1 {
+  display: flex;
+  align-items: center;
+  justify-content: justify;
+  flex-direction: row;
+}
+.title1 {
+  position: absolute;
+  color: var(--black);
+  top: 25%;
+  padding: 5px;
+  background-color: var(--turquoise);
+  z-index: 10;
+  transform: translateY(-50%);
+}
+.Project3 {
+  width: 225%;
+  height: 150px;
+  position: relative;
+  right: -115%;
+}
+.title2 {
+  position: absolute;
+  color: var(--black);
+  left: 0%;
+  top: 40%;
+  padding: 5px;
+  background-color: var(--turquoise);
+  z-index: 10;
+  transform: translateY(-50%);
+}
+.title3 {
+  position: absolute;
+  color: var(--black);
+  right: 26.5%;
+  top: 40%;
+  padding: 0px;
+  background-color: var(--turquoise);
+  z-index: 10;
+  transform: translateY(-50%);
+}
+.content3 {
+  display: flex;
+  justify-content: justify;
+  flex-direction: row;
+}
+ul {
+  
 }
